package com.pluralsight;

public class Cheese extends StoreItem{
    Cheese(String name, double price, String size) {
        super(name, price, size);
    }


}
