package com.pluralsight;

public interface Priceable {
    double getPrice();
    }

